Closed
Bug 309348
Opened 20 years ago
Closed 19 years ago
form will not submit when clicking the submit button
Categories
(Core :: Layout: Form Controls, defect)
Core
Layout: Form Controls
Tracking
()
RESOLVED
FIXED
mozilla1.8beta5
People
(Reporter: jason.seto, Assigned: jst)
References
()
Details
(Keywords: fixed1.8, regression, testcase, Whiteboard: [HAVE FIX])
Attachments
(2 files)
|
415 bytes,
text/html
|
Details | |
|
1.49 KB,
patch
|
bryner
:
review+
bzbarsky
:
superreview+
asa
:
approval1.8b5+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b4) Gecko/20050908 Firefox/1.4
when filling out the form fields (does not need to be valid info) the submit
button will not submit. pressing <enter> on password field will not submit either.
Reproducible: Always
Steps to Reproduce:
1. fill in card number field
2. fill in password field
3. press submit
Actual Results:
nothing
Expected Results:
the form should submit and the data (card/password) should be validated
i work for cibc online banking. you can contact me at jason.seto@cibc.com for
more information.
Comment 1•20 years ago
|
||
I just get a 404 Not Found from that URL - is it wrong, or do we need to get
there from another page, or already be authenticated some other way?
Assignee: nobody → events
Component: General → DOM: Events
Product: Firefox → Core
QA Contact: general → ian
Version: unspecified → 1.8 Branch
Comment 2•20 years ago
|
||
1. do you see any messages in the javascript console if you press submit ?
2. did it work with previous Firefox versions ?
Component: DOM: Events → General
Product: Core → Firefox
QA Contact: ian → general
Version: 1.8 Branch → unspecified
yes, this works with 1.0.6 which i am using now, as well as IE and other ****
browsers.
Comment 4•20 years ago
|
||
I've examined the page code and am not sure why the form is not submitted. But I
certainly would code the page differently, in several areas; there are many
wrong coding practices and errors in that page...
How about coding (line 467):
<input type="submit" value="Sign On" class="calloutButton"
onsubmit="clickedSignOn = true;" onMouseOut="clickedSignOn=false;" tabindex="4">
and then getting rid of the doSignOn() (line 147) entirely?
Comment 5•20 years ago
|
||
Correction: it *is* submitted and validated. Firefox 1.4 rv: 1.8b4 build
20050918 under XP Pro SP2 here.
My other comments still remain: there are much better coding practices to code
several areas of the pages involved.
Comment 6•20 years ago
|
||
I've attached a simplified page demonstrating the bug. This appears to be a
re-emergence of (or at least very similar to)
https://bugzilla.mozilla.org/show_bug.cgi?id=242494
here is the URL to use to verify this bug:
https://www.cibconline.cibc.com/olbtxn/authentication/PreSignOn.cibc?locale=en_CA
Comment 8•20 years ago
|
||
Confirmed. At the URL provided in comment 7, hitting "Submit" gives me nothing
using (Gecko/20050920 Firefox/1.4), but works fine (returns an error) using
Firefox 1.0.6.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•20 years ago
|
Flags: blocking1.8b5?
Keywords: regression
Updated•20 years ago
|
Version: unspecified → Trunk
Comment 9•20 years ago
|
||
We really need a regression window on this, should be fairly easy... I hope.
Component: General → Layout: Form Controls
Flags: blocking1.8b5? → blocking1.8b5+
Product: Firefox → Core
Version: Trunk → 1.8 Branch
Comment 10•20 years ago
|
||
Some time before Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a5)
Gecko/20041018 Firefox/0.9.1+, which is as far back as I have trunk builds.
Comment 11•20 years ago
|
||
(In reply to comment #10)
> Some time before Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8a5)
> Gecko/20041018 Firefox/0.9.1+, which is as far back as I have trunk builds.
Really? This was working for me (I'm a CIBC online banker) up until a week or
two ago - roughly.
Comment 12•20 years ago
|
||
I too can confirm this bug. I have tested with the latest Branch and Trunk
builds and this is a problem. I have also tested with Branch builds going back
as far as 20050912 (the earliest for which I can find binaries) and it still
does not work. However it does work with 1.0.7
Note: I believe that CIBC may have changed their script not much more than a
week or so ago, because I am absolutely positive that I have successfully logged
into the site within that timeframe, using a Branch build that should not have
been greater than 3 days out of date. Thus, it does not appear to be a
regression per se. Nonetheless, it no longer works - except with the Official
build.
Comment 13•20 years ago
|
||
This broke on the trunk between 2004-04-30-08 and 2004-05-02-08 (couldn't find
any builds in between).
The most likely candidate for breaking this is bug 60212.
OS: Windows 2000 → All
Hardware: PC → All
Version: 1.8 Branch → Trunk
| Assignee | ||
Comment 15•20 years ago
|
||
This fixes this bug. The problem is that the click event handlers here prevent
the default action, which ends up preventing us from firing the NS_UI_ACTIVATE
event, which is what's expected to flush the pending form submission. So in
this case we end up never flushing pending form submissions...
| Assignee | ||
Updated•20 years ago
|
Attachment #197917 -
Flags: superreview?(bzbarsky)
Attachment #197917 -
Flags: review?(bryner)
| Assignee | ||
Updated•20 years ago
|
Status: NEW → ASSIGNED
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla1.8beta5
Updated•20 years ago
|
Attachment #197917 -
Flags: review?(bryner) → review+
Comment 16•20 years ago
|
||
Comment on attachment 197917 [details] [diff] [review]
Fix
I guess this is ok, but I'd prefer something more like the nsHTMLInputElement
logic, which has a boolean outerActivateEvent that it uses to trigger this
case... Could you do that here too, please?
Attachment #197917 -
Flags: superreview?(bzbarsky) → superreview+
Updated•20 years ago
|
Attachment #197917 -
Flags: approval1.8b5+
Comment 17•20 years ago
|
||
*** Bug 310561 has been marked as a duplicate of this bug. ***
Comment 18•20 years ago
|
||
This has to be one of the stranger bugs I've seen to pin down to a product. I
agree with comment 12 - and had filed a duplicate of this under Tech. Evangelism
because of that. The very same build, 2 weeks ago, that *definitely* worked on
the CIBC site at that time fails to work today. (After having gone back to it
for testing.) Since it's exactly the same browser code, the only variable has
to be that the CIBC site code has changed in the past 2 weeks - which has likely
only just now exposed a rather long-lasting bug in Seamonkey (comment 14).
| Assignee | ||
Comment 19•20 years ago
|
||
(In reply to comment #16)
> (From update of attachment 197917 [details] [diff] [review] [edit])
> I guess this is ok, but I'd prefer something more like the nsHTMLInputElement
> logic, which has a boolean outerActivateEvent that it uses to trigger this
> case... Could you do that here too, please?
>
I can, but I'll land this as is first, and I'll do the other changes later on
for the tunk only.
| Assignee | ||
Comment 20•20 years ago
|
||
Fix landed on trunk and branch, leaving bug open to do the cleanup on the trunk.
Keywords: fixed1.8
Comment 21•20 years ago
|
||
*** Bug 310876 has been marked as a duplicate of this bug. ***
Comment 22•20 years ago
|
||
I can log in to CIBC now, but I can't submit a search on Air Canada's web site.
Is this related?
http://www.aircanada.com/en/home.html
Then try to search in the Book a Flight section. Looks very similar to the
symptoms of this bug.
Comment 23•20 years ago
|
||
(In reply to comment #22)
> I can log in to CIBC now, but I can't submit a search on Air Canada's web site.
> Is this related?
>
> http://www.aircanada.com/en/home.html
>
> Then try to search in the Book a Flight section. Looks very similar to the
> symptoms of this bug.
WFM: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8b5) Gecko/20051003
Firefox/1.4.1 ID:2005100307
Have you tested with a clean profile?
Comment 24•20 years ago
|
||
Tried it with a clean profile but it's no different.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051004
Firefox/1.6a1
| Reporter | ||
Comment 25•20 years ago
|
||
the original bug with the cibc.com site has been fixed in the build i just
retrieved:
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20051004
Firefox/1.6a1
Comment 26•20 years ago
|
||
(In reply to comment #24)
> Tried it with a clean profile but it's no different.
>
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20051004
> Firefox/1.6a1
I can confirm your bug. Deer Park 20051003 works, but 20051004 fails. Even the
language selection dialog (non-Canadian residents may not see this), in the
absence of a previous cookie, fails.
Comment 27•20 years ago
|
||
Ahem... Sorry to spam the board. I was in error when I wrote "Even the
language selection dialog (non-Canadian residents may not see this)." Everyone
will see it, because it's a country selection page! :-)
FYI, cibc.com is still okay. It's just aircanada.com that is now b0rk3d.
Comment 28•20 years ago
|
||
jst, this was basically a dup of bug 277890, right? I guess we should dup that
one forward to here...
Blocks: 277890
Comment 29•20 years ago
|
||
*** Bug 311319 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Flags: blocking1.9a1?
Updated•20 years ago
|
QA Contact: general → layout.form-controls
Comment 31•19 years ago
|
||
Resolving fixed. Bug 277890 is now tracking the remaining cleanup.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•