Fixing bug 309348. Don't drop pending form submissions when handling click events even if the event handler drevented the default action. r=bryner@brianryner.com, sr=bzbarsky@mit.edu